--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="首頁">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="https://s12.aconvert.com/convert/p3r68-cdx67/alqx9-6lm8t-001.ico">
+    <link rel="icon" href="img/mango.ico">
     <link rel="stylesheet" href="css/all.css">
     <title>林家芒果園</title>
 </head>
