--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-5">
-                    <img src="img/mangoLogo.png" alt="logo-footer" class="mb-6 mb-md-10">
+                    <img src="img/mangoLogo.png" alt="logo-footer" class="mb-6 mb-md-10" style="margin-left: -40px;">
                     <div>
                         <ul class="text-primary mb-6">
                             <li><a href="tel:+07-1234-5678">07-1234-5678</a></li>
